addons/deployment/hello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-otr-deployment
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 1
  template:
    metadata:
      name: hello-otr
      labels:
        app: hello
    spec:
      containers:
      - name: hello-otr
        image: lotusp/hello-world-of-node:1.1
        ports:
          - containerPort: 8080
